image holder done

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylessheet.css">
     <title>form section</title>
 </head>
 <body>
     <div class="form_container">
         <div class="form--items">
             <div class="image_holder">
-                <img src="" alt="profile picture">
+                <!-- <img src="" alt="profile picture"> -->
             </div>
 
             <div class="input_holder">
