complete name input form

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             </div>
 
             <div class="input_holder">
+                <p class="header"> how may we call you?</p>
+                
                 <label for="name" class="input">
                     <input type="text" class="name" placeholder = "Enter name">
                 </label>
@@ -22,16 +24,25 @@
             </div>
 
             <div class="nav_bars">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
+                <div class="nav_blank">&nbsp;</div>
+                <div class="nav_blank">&nbsp;</div>
+                <div class="nav_blank">&nbsp;</div>
+                <div class="nav_blank">&nbsp;</div>
+                <div class="nav_blank">&nbsp;</div>
+                
             </div>
 
 
         </div>
     </div>
+
+    <footer>
+        <div class="discription">
+            <p class="footer_para">
+                This design was gotten from <a href="uigarage.net" class="footer_link">uigarage.net</a> 
+                and was built using HTML5 and vanila CSS, by Harold O, Ekemkpa
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
